style.css
* {
  box-sizing: border-box;
}

.container {
  width: 80%;
  margin-left: 40px;
}
header {
  background: #778899;
  color: darkcyan;
}

nav {
  float: right;
  margin-top: 1px;
  /* background: lightslategray; */
  color: darkcyan;
}

nav a {
  display: inline-block;
  padding-left: 15px;
  margin-left: 15px;
  line-height: 10px;
  color: #999;
  text-decoration: none;
  border-left: 2px solid #efefef;
  font-size: 18px;
  /* border-left: 1px solid gray; */
}

nav a:hover {
  cursor: pointer;
  color: tomato;
  transform: scale(1.09);
}

h1 {
  font-family: Helvetica;
  margin: 60px 30px 40px 100px;
  padding-left: 50px;
}

h2 {
  font-family: Helvetica;
  color: gray;
  opacity: 0.75;
  padding: 40px 0 30px 50px;
  margin-left: 100px;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
  color: darkcyan;
  text-decoration: none;
}

nav li {
  display: inline-block;
  margin-left: 65px;
  color: darkcyan;
  text-decoration: none;
}

p {
  font-family: Arial;
  color: black;
  padding-left: 50px;
  margin-left: 100px;
  margin-right: 350px;
  font-size: 20px;
}

img {
  padding: 50px;
  margin-left: 100px;
}

footer {
  /* padding: 30px 0;
  clear: both;
  font-size: 12px;
  font-family: Helvetica;
  color: white;
  text-align: center;
  background: #666666;
  opacity: 0.25;
  margin-top: 20px;
  height: 3px; */

  background: #666666;
  opacity: 0.5;
  color: #fff;
  padding: 30px 0;
  clear: both;
  border-top: 8px solid lightcyan;
  color: #ccc;
  font-size: 14px;
  text-align: center;
  width: 100%;
  position: fixed;
  width: 100%;
  bottom: 0px;
  left: 0px;
  margin-top: 50px;
}

